--- a/config/manifests/bases/mondoo-operator.clusterserviceversion.yaml
+++ b/config/manifests/bases/mondoo-operator.clusterserviceversion.yaml
@@ -23,7 +23,18 @@ spec:
       displayName: Mondoo Audit Config
       kind: MondooAuditConfig
       name: mondooauditconfigs.k8s.mondoo.com
+      version: v1alpha2
+    - description: MondooAuditConfig is the Schema for the mondooauditconfigs API
+      displayName: Mondoo Audit Config
+      kind: MondooAuditConfig
+      name: mondooauditconfigs.k8s.mondoo.com
       version: v1alpha1
+    - description: MondooOperatorConfig is the Schema for the mondoooperatorconfigs
+        API
+      displayName: Mondoo Operator Config
+      kind: MondooOperatorConfig
+      name: mondoooperatorconfigs.k8s.mondoo.com
+      version: v1alpha2
     - description: MondooOperatorConfig is the Schema for the mondoooperatorconfigs
         API
       displayName: Mondoo Operator Config
