--- a/charts/mondoo-operator/templates/workload-rbac.yaml
+++ b/charts/mondoo-operator/templates/workload-rbac.yaml
@@ -1,20 +1,4 @@
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
-metadata:
-  name: {{ include "mondoo-operator.fullname" . }}-workload
-  labels:
-  {{- include "mondoo-operator.labels" . | nindent 4 }}
-rules:
-- apiGroups:
-  - '*'
-  resources:
-  - '*'
-  verbs:
-  - get
-  - watch
-  - list
----
-apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: {{ include "mondoo-operator.fullname" . }}-workload
@@ -23,8 +7,8 @@ metadata:
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: '{{ include "mondoo-operator.fullname" . }}-workload'
+  name: workload
 subjects:
 - kind: ServiceAccount
-  name: '{{ include "mondoo-operator.fullname" . }}-workload'
+  name: '{{ include "mondoo-operator.fullname" . }}-k8s-resources-scanning'
   namespace: '{{ .Release.Namespace }}'
