allow cluster-wide access to cronjobs fixed some small bugs
Signed-off-by: Ivan Milchev <ivan@mondoo.com>

--- a/config/samples/k8s_v1alpha2_mondooauditconfig_minimal.yaml
+++ b/config/samples/k8s_v1alpha2_mondooauditconfig_minimal.yaml
@@ -7,7 +7,7 @@ spec:
   mondooCredsSecretRef:
     name: mondoo-client
   kubernetesResources:
-    enable: true
+    enable: false
   nodes:
     enable: true
   admission:
