--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -21,7 +21,7 @@ rules:
 - apiGroups:
   - apps
   resources:
-  - daemonsets
+  - deployments
   verbs:
   - create
   - delete
@@ -31,9 +31,9 @@ rules:
   - update
   - watch
 - apiGroups:
-  - apps
+  - batch
   resources:
-  - deployments
+  - cronjobs
   verbs:
   - create
   - delete
