--- a/config/samples/k8s_v1alpha2_mondooauditconfig.yaml
+++ b/config/samples/k8s_v1alpha2_mondooauditconfig.yaml
@@ -4,7 +4,8 @@ metadata:
   name: mondoo-client
   namespace: mondoo-operator
 spec:
-  mondooCredsSecretRef: mondoo-client
+  mondooCredsSecretRef: 
+    name: mondoo-client
   scanner:
     serviceAccountName: mondoo-client
     image:
