--- a/config/samples/k8s_v1alpha2_mondooauditconfig_minimal.yaml
+++ b/config/samples/k8s_v1alpha2_mondooauditconfig_minimal.yaml
@@ -4,13 +4,14 @@ metadata:
   name: mondoo-client
   namespace: mondoo-operator
 spec:
-  mondooCredsSecretRef: mondoo-client
+  mondooCredsSecretRef:
+    name: mondoo-client
   kubernetesResources:
     enable: true
   nodes:
     enable: true
   admission:
-    enable: true
+    enable: false
     certificateProvisioning:
       # Could be "cert-manager", "openshift" or "manual"
       mode: cert-manager
