token to service account
Allow specifying a MondooAuditConfig.Spec.MondooTokenSecretRef. If the Secret referenced in .Spec.MondooCredsSecretRef doesn't exists, and MondooTokenSecretRef does exist, use the token data to exchange for a Mondoo service account and save it into the MondooCredsSecretRef Secret.

Create a new mondooclient package (modeled after the scanner package) to wrap the interactions with the Mondoo API. Generate a mock client to allow testing of the various token/creds scenarios.

Add RBAC to the mondoo-operator ClusterRole to allow reading the Secrets named 'mondoo-client' and 'mondoo-token'. A user wishing to specify different Secret names will need to update the RBAC rules to allow mondoo-operator to read those alternative Secret names.

Note: Using the kubernetes client-go client to do the Secret checking because controller-runtime will try to List() all Secrets.

Signed-off-by: Joel Diaz <joel@mondoo.com>

--- a/config/crd/bases/k8s.mondoo.com_mondooauditconfigs.yaml
+++ b/config/crd/bases/k8s.mondoo.com_mondooauditconfigs.yaml
@@ -283,6 +283,17 @@ spec:
                       TODO: Add other useful fields. apiVersion, kind, uid?'
                     type: string
                 type: object
+              mondooTokenSecretRef:
+                description: MondooTokenSecretRef can optionally hold a time-limited
+                  token that the mondoo-operator will use to create a Mondoo service
+                  account saved to the Secret specified in .spec.mondooCredsSecretRef
+                  if that Secret does not exist.
+                properties:
+                  name:
+                    description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
+                      TODO: Add other useful fields. apiVersion, kind, uid?'
+                    type: string
+                type: object
               nodes:
                 properties:
                   enable:
