--- a/config/samples/k8s_v1alpha2_mondooauditconfig.yaml
+++ b/config/samples/k8s_v1alpha2_mondooauditconfig.yaml
@@ -4,6 +4,8 @@ metadata:
   name: mondoo-client
   namespace: mondoo-operator
 spec:
+  mondooTokenSecretRef:
+    name: mondoo-token
   mondooCredsSecretRef: 
     name: mondoo-client
   scanner:
