--- a/config/rbac/k8s_resources_scanning_clusterrolebinding.yaml
+++ b/config/rbac/k8s_resources_scanning_clusterrolebinding.yaml
@@ -1,11 +1,11 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: workload
+  name: k8s-resources-scanning
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: workload
+  name: k8s-resources-scanning
 subjects:
 - kind: ServiceAccount
   name: k8s-resources-scanning
