--- a/charts/mondoo-operator/templates/k8s-resources-scanning-rbac.yaml
+++ b/charts/mondoo-operator/templates/k8s-resources-scanning-rbac.yaml
@@ -13,3 +13,18 @@ rules:
   - get
   - watch
   - list
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: {{ include "mondoo-operator.fullname" . }}-k8s-resources-scanning
+  labels:
+  {{- include "mondoo-operator.labels" . | nindent 4 }}
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: '{{ include "mondoo-operator.fullname" . }}-k8s-resources-scanning'
+subjects:
+- kind: ServiceAccount
+  name: '{{ include "mondoo-operator.fullname" . }}-k8s-resources-scanning'
+  namespace: '{{ .Release.Namespace }}'
