--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -21,6 +21,15 @@ rules:
 - apiGroups:
   - apps
   resources:
+  - daemonsets
+  verbs:
+  - delete
+  - get
+  - list
+  - watch
+- apiGroups:
+  - apps
+  resources:
   - deployments
   verbs:
   - create
