--- a/config/samples/k8s_v1alpha2_mondooauditconfig_minimal.yaml
+++ b/config/samples/k8s_v1alpha2_mondooauditconfig_minimal.yaml
@@ -11,7 +11,7 @@ spec:
   nodes:
     enable: true
   admission:
-    enable: false
+    enable: true
     certificateProvisioning:
       # Could be "cert-manager", "openshift" or "manual"
       mode: cert-manager
