--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -98,6 +98,7 @@ jobs:
 
       - run: make test/integration/ci
       - uses: actions/download-artifact@v3 # download the unit test results
+        if: success() || failure()        # run this step even if previous step failed
         with:
           name: unit-test-results
       - uses: actions/upload-artifact@v3  # upload test results
