⭐ Node scanning via CronJob (#313)
* initial changes for node scanning

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* partial refactor of node scanning handling

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* create CronJob instead of DaemonSet for node scanning

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* list nodes before creating/updating cronjob

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* allow cluster-wide access to cronjobs
fixed some small bugs

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* restructured code to create 1 cronjob per node
added some more TODOs
added back access to daemonsets

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* implemented watching nodes creation and deletion

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* implemented deleting cronjob when node is deleted
implemented status checking for node scanning

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* implemented CronJob deep equals

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* applied consistent naming for deployment handlers

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* added unit tests for AreCronJobsEqual

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* only enqueue MondooAuditConfig if it has node scanning enabled when tracking nodes

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* added more unit tests

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* fixed broken code after rebase

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* added unit tests for nodes DeploymentHandler

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* make sure unit tests and integration tests are always exported even if integration tests fail

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* fixed integration tests

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* updated architectural diagram

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* use svg instead of png

Signed-off-by: Ivan Milchev <iv

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -23,6 +23,15 @@ rules:
   resources:
   - daemonsets
   verbs:
+  - delete
+  - get
+  - list
+  - watch
+- apiGroups:
+  - apps
+  resources:
+  - deployments
+  verbs:
   - create
   - delete
   - get
@@ -31,9 +40,9 @@ rules:
   - update
   - watch
 - apiGroups:
-  - apps
+  - batch
   resources:
-  - deployments
+  - cronjobs
   verbs:
   - create
   - delete
@@ -71,6 +80,7 @@ rules:
   - ""
   resources:
   - namespaces
+  - nodes
   - pods
   verbs:
   - get
