--- a/config/crd/bases/k8s.mondoo.com_mondooauditconfigs.yaml
+++ b/config/crd/bases/k8s.mondoo.com_mondooauditconfigs.yaml
@@ -269,6 +269,11 @@ spec:
                     - enforcing
                     type: string
                 type: object
+              consoleIntegration:
+                properties:
+                  enable:
+                    type: boolean
+                type: object
               kubernetesResources:
                 properties:
                   enable:
