--- a/.github/workflows/release-helm-chart.yaml
+++ b/.github/workflows/release-helm-chart.yaml
@@ -25,9 +25,8 @@ jobs:
 
       - name: Start minikube
         uses: medyagh/setup-minikube@master
-
-      - name: Try the cluster !
-        run: kubectl get pods -A
+        with:
+          memory: 4000m
 
       - name: Install Helm
         uses: azure/setup-helm@v1
