--- a/.github/workflows/e2e-olm.yaml
+++ b/.github/workflows/e2e-olm.yaml
@@ -59,22 +59,16 @@ jobs:
         run: |
           operator-sdk olm install
           kubectl create ns mondoo-operator
-          operator-sdk run bundle ghcr.io/mondoohq/mondoo-operator-bundle:v0.2.8 --namespace mondoo-operator --timeout 5m0s
+          operator-sdk run bundle ghcr.io/mondoohq/mondoo-operator-bundle:v0.2.8 --namespace mondoo-operator --timeout 1m0s
 
       - name: Gather running pods
         if: failure()
         run: |
           mkdir -p tests/integration/_output
-          kubectl get pods -n mondoo-operator -o yaml >> olm-installation-pods.log
+          kubectl get pods -n mondoo-operator -o yaml >> tests/integration/_output/olm-installation-pods.log
 
       - name: Store creds
         run: echo ${{ secrets.MONDOO_CLIENT }} | base64 -d > creds.json
-
-      # Now that dependencies are cached the tests start almost immediately after minikube has started
-      # this makes tests fail occasionally. This sleep gives the runner some time to become more stable
-      # before the test execution starts.
-      - name: Wait a bit for the runner to become more stable
-        run: sleep 60
 
       - name: Run integration tests
         run: EXTERNAL_INSTALLATION=1 make test/integration/ci
