list all pods in case of olm failure
Signed-off-by: Ivan Milchev <ivan@mondoo.com>

--- a/.github/workflows/e2e-olm.yaml
+++ b/.github/workflows/e2e-olm.yaml
@@ -64,6 +64,7 @@ jobs:
       - name: Gather running pods
         if: failure()
         run: |
+          kubectl get pods -A
           mkdir -p tests/integration/_output
           kubectl get pods -n mondoo-operator -o yaml >> tests/integration/_output/olm-installation-pods.log
           kubectl logs -n mondoo-operator ghcr-io-mondoohq-mondoo-operator-bundle-v0-2-8 >> tests/integration/_output/olm-installation-pods.log
