--- a/.github/workflows/e2e-olm.yaml
+++ b/.github/workflows/e2e-olm.yaml
@@ -68,6 +68,7 @@ jobs:
           mkdir -p tests/integration/_output
           kubectl get pods -n mondoo-operator -o yaml >> tests/integration/_output/olm-installation-pods.log
           kubectl logs -n mondoo-operator ghcr-io-mondoohq-mondoo-operator-bundle-v0-2-8 >> tests/integration/_output/olm-installation-pods.log
+          kubectl logs -n olm deployment/olm-operator >> tests/integration/_output/olm-installation-pods.log
 
       - name: Store creds
         run: echo ${{ secrets.MONDOO_CLIENT }} | base64 -d > creds.json
