add tmate for debugging olm
Signed-off-by: Ivan Milchev <ivan@mondoo.com>

--- a/.github/workflows/e2e-olm.yaml
+++ b/.github/workflows/e2e-olm.yaml
@@ -94,3 +94,8 @@ jobs:
           name: Report OLM test results
           path: '*.xml'                     # Path to test results
           reporter: java-junit              # Format of test results
+
+      - name: setup tmate session for debugging
+        if: failure()
+        uses: mxschmitt/action-tmate@v3
+        timeout-minutes: 60
