--- a/charts/mondoo-operator/templates/mondooauditconfig-crd.yaml
+++ b/charts/mondoo-operator/templates/mondooauditconfig-crd.yaml
@@ -279,6 +279,11 @@ spec:
                     - enforcing
                     type: string
                 type: object
+              consoleIntegration:
+                properties:
+                  enable:
+                    type: boolean
+                type: object
               kubernetesResources:
                 properties:
                   enable:
