--- a/controllers/nodes/inventory.yaml
+++ b/controllers/nodes/inventory.yaml
@@ -7,6 +7,9 @@ metadata:
 spec:
   assets:
     - id: host
+      name: {{node-name}}
+      id_detector:
+        - machine-id
       connections:
         - host: /mnt/host
           backend: fs
