--- a/charts/mondoo-operator/values.yaml
+++ b/charts/mondoo-operator/values.yaml
@@ -11,6 +11,7 @@ controllerManager:
         cpu: 100m
         memory: 20Mi
   replicas: 1
+kubernetesClusterDomain: cluster.local
 managerConfig:
   controllerManagerConfigYaml:
     health:
