--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -87,16 +87,17 @@ jobs:
         if: success() || failure()        # run this step even if previous step failed
         with:
           name: unit-test-results
+      - run: mv integration-tests.xml integration-tests-${{ matrix.k8s-version }}.xml
       - uses: actions/upload-artifact@v3  # upload test results
         if: success() || failure()        # run this step even if previous step failed
         with:                             # upload a combined archive with unit and integration test results
           name: test-results
           path: |
             unit-tests.xml
-            integration-tests.xml
+            integration-tests-${{ matrix.k8s-version }}.xml
       - name: Upload test logs artifact
         uses: actions/upload-artifact@v3
         if: failure()
         with:
-          name: test-logs
+          name: test-logs-${{ matrix.k8s-version }}
           path: /home/runner/work/mondoo-operator/mondoo-operator/tests/integration/_output/
