--- a/charts/mondoo-operator/templates/mondoooperatorconfig-crd.yaml
+++ b/charts/mondoo-operator/templates/mondoooperatorconfig-crd.yaml
@@ -4,8 +4,8 @@ metadata:
   name: mondoooperatorconfigs.k8s.mondoo.com
   annotations:
     cert-manager.io/inject-ca-from: {{ .Release.Namespace }}/{{ include "mondoo-operator.fullname" . }}-
+    controller-gen.kubebuilder.io/version: v0.7.0
   labels:
-
   {{- include "mondoo-operator.labels" . | nindent 4 }}
 spec:
   group: k8s.mondoo.com
