🧹 Merge operator and webhook binary into a single CLI binary (#383)
* merge operator and webhooks binary into a single CLI binary

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* reverted changes on kustomization files

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -88,6 +88,7 @@ jobs:
         with:
           name: unit-test-results
       - run: mv integration-tests.xml integration-tests-${{ matrix.k8s-version }}.xml
+        if: success() || failure()
       - uses: actions/upload-artifact@v3  # upload test results
         if: success() || failure()        # run this step even if previous step failed
         with:                             # upload a combined archive with unit and integration test results
