--- a/config/default/manager_public_metrics_patch.yaml
+++ b/config/default/manager_public_metrics_patch.yaml
@@ -11,6 +11,7 @@ spec:
       containers:
       - name: manager
         args:
+        - "operator"
         - "--health-probe-bind-address=:8081"
         - "--metrics-bind-address=:8080"
         - "--leader-elect"
