--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -28,8 +28,9 @@ spec:
         runAsNonRoot: true
       containers:
       - command:
-        - /manager
+        - /mondoo-operator
         args:
+        - operator
         - --leader-elect
         image: controller:latest
         imagePullPolicy: IfNotPresent
