--- a/config/webhook/kustomization.yaml
+++ b/config/webhook/kustomization.yaml
@@ -7,4 +7,4 @@ resources:
 images:
 - name: controller
   newName: ghcr.io/mondoohq/mondoo-operator
-  newTag: sha256-6e75db2e3c458261873353b34d05577f70325704.sig
+  newTag: v0.0.1
