run release.sh delete cleanup code
Signed-off-by: Ivan Milchev <ivan@mondoo.com>

--- a/charts/mondoo-operator/templates/deployment.yaml
+++ b/charts/mondoo-operator/templates/deployment.yaml
@@ -35,11 +35,12 @@ spec:
     spec:
       containers:
       - args:
+        - operator
         - --health-probe-bind-address=:8081
         - --metrics-bind-address=:8080
         - --leader-elect
         command:
-        - /manager
+        - /mondoo-operator
         env:
         - name: KUBERNETES_CLUSTER_DOMAIN
           value: {{ .Values.kubernetesClusterDomain }}
