Add operator version to status of MondooAuditConfig
This adds the version of the operator which reconciled the MondooAuditConfig
to the `Status` section of the CR.

part of #380

Signed-off-by: Christian Zunker <christian@mondoo.com>

--- a/config/crd/bases/k8s.mondoo.com_mondooauditconfigs.yaml
+++ b/config/crd/bases/k8s.mondoo.com_mondooauditconfigs.yaml
@@ -193,6 +193,10 @@ spec:
                 items:
                   type: string
                 type: array
+              reconciledByOperatorVersion:
+                description: ReconciledByOperatorVersion contains the version of the
+                  operator which reconciled this MondooAuditConfig
+                type: string
             type: object
         type: object
     served: true
