--- a/.github/workflows/validate-actions.yaml
+++ b/.github/workflows/validate-actions.yaml
@@ -18,7 +18,7 @@ jobs:
         with:
           go-version: "${{ env.golang-version }}"
       - run: |
-          curl -O https://github.com/nektos/act/releases/download/v0.2.26/act_Linux_x86_64.tar.gz
+          curl -OLs https://github.com/nektos/act/releases/download/v0.2.26/act_Linux_x86_64.tar.gz
           tar xzf act_Linux_x86_64.tar.gz
           mkdir ./bin
           cp act ./bin
