--- a/.github/workflows/validate-actions.yaml
+++ b/.github/workflows/validate-actions.yaml
@@ -18,6 +18,9 @@ jobs:
         with:
           go-version: "${{ env.golang-version }}"
       - run: |
-          curl https://raw.githubusercontent.com/nektos/act/master/install.sh | sudo bash
+          curl -OLs https://github.com/nektos/act/releases/download/v0.2.26/act_Linux_x86_64.tar.gz
+          tar xzf act_Linux_x86_64.tar.gz
+          mkdir ./bin
+          cp act ./bin
           export PATH=$PATH:./bin
           make test/github-actions
