--- a/charts/mondoo-operator/templates/mondooauditconfig-crd.yaml
+++ b/charts/mondoo-operator/templates/mondooauditconfig-crd.yaml
@@ -4,7 +4,6 @@ metadata:
   name: mondooauditconfigs.k8s.mondoo.com
   annotations:
     cert-manager.io/inject-ca-from: {{ .Release.Namespace }}/{{ include "mondoo-operator.fullname" . }}-
-    controller-gen.kubebuilder.io/version: v0.7.0
   labels:
   {{- include "mondoo-operator.labels" . | nindent 4 }}
 spec:
@@ -204,6 +203,10 @@ spec:
                 items:
                   type: string
                 type: array
+              reconciledByOperatorVersion:
+                description: ReconciledByOperatorVersion contains the version of the
+                  operator which reconciled this MondooAuditConfig
+                type: string
             type: object
         type: object
     served: true
