🐛 Fix Helm release for v0.4.1 (#398)
* Fix Helm release for v0.4.1

The new Status field `ReconciledByOperatorVersion` broke the Helm and OLM integration tests.
the field was also missing in the CRD.

Signed-off-by: Christian Zunker <christian@mondoo.com>

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -30,6 +30,9 @@ jobs:
       # This is used to complete the identity challenge
       # with sigstore/fulcio when running outside of PRs.
       id-token: write
+
+    outputs:
+      version: ${{ steps.get_version.outputs.VERSION }}
     
     strategy:
       matrix:
@@ -329,7 +332,7 @@ jobs:
         run: echo ${{ secrets.MONDOO_CLIENT }} | base64 -d > creds.json
 
       - name: Run integration tests
-        run: EXTERNAL_INSTALLATION=1 make test/integration/ci
+        run: EXTERNAL_INSTALLATION=1 VERSION=${{ needs.build-operator.outputs.version }} make test/integration/ci
 
       - name: Clean up
         run: |
@@ -405,7 +408,7 @@ jobs:
         run: sleep 60
 
       - name: Run integration tests
-        run: EXTERNAL_INSTALLATION=1 make test/integration/ci
+        run: EXTERNAL_INSTALLATION=1 VERSION=${{ needs.build-operator.outputs.version }} make test/integration/ci
 
       - name: Upload test logs artifact
         uses: actions/upload-artifact@v3
