--- a/config/crd/bases/k8s.mondoo.com_mondooauditconfigs.yaml
+++ b/config/crd/bases/k8s.mondoo.com_mondooauditconfigs.yaml
@@ -70,6 +70,9 @@ spec:
                     - permissive
                     - enforcing
                     type: string
+                  replicas:
+                    format: int32
+                    type: integer
                 type: object
               consoleIntegration:
                 properties:
