Add comment to  field
Signed-off-by: Christian Zunker <christian@mondoo.com>

--- a/config/crd/bases/k8s.mondoo.com_mondooauditconfigs.yaml
+++ b/config/crd/bases/k8s.mondoo.com_mondooauditconfigs.yaml
@@ -71,6 +71,12 @@ spec:
                     - enforcing
                     type: string
                   replicas:
+                    description: Number of replicas for the admission webhook. When
+                      not set and mode is "enforcing", it will automtically be set
+                      to two. When not set and mode is "permissive, it will be set
+                      to one. For enforcing mode, the minimum should be two to prevent
+                      problems during Pod failures, e.g. node failure, node scaling,
+                      etc.
                     format: int32
                     type: integer
                 type: object
